--- a/x-dot-loader/x-dot-loader.css
+++ b/x-dot-loader/x-dot-loader.css
@@ -6,14 +6,14 @@
     height: 10px;
     border-radius: 50%;
     /* background: white; */
-    box-shadow: 0.5em 0 #3b3b3b;
+    box-shadow: 10px 0 #3b3b3b;
     animation: dot-loader-animation 1s ease-in-out 0s infinite;
 }
 
 .dot-loader.white,
 .dot-loader.white::before,
 .dot-loader.white::after {
-    box-shadow: 10em 0 white;
+    box-shadow: 10px 0 white;
     animation: dot-loader-animation-white 1s ease-in-out 0s infinite;
 }
 
@@ -21,7 +21,7 @@
 .dot-loader.white {
     position: relative;
     animation-delay: 0.1s;
-    margin: 0 1.2em 0.16em 0.2em;
+    margin: 0 24px 0.16em -5px;
 }
 
 .dot-loader::before,
@@ -32,24 +32,24 @@
 
 .dot-loader::before,
 .dot-loader.white::before {
-    left: -0.6em;
+    left: -13px;
     animation-delay: 0s;
 }
 
 .dot-loader::after,
 .dot-loader.white::after {
-    left: 0.6em;
+    left: 13px;
     animation-delay: 0.2s;
 }
 
 @keyframes dot-loader-animation {
-    15% { box-shadow: 0.5em -0.2em #3b3b3b; }
-    30% { box-shadow: 0.5em 0.2em #3b3b3b; }
-    0%, 45%, 100% { box-shadow: 0.5em 0 #3b3b3b; }
+    15% { box-shadow: 10px -3px #3b3b3b; }
+    30% { box-shadow: 10px 3px #3b3b3b; }
+    0%, 45%, 100% { box-shadow: 10px 0 #3b3b3b; }
 }
 
 @keyframes dot-loader-animation-white {
-    15% { box-shadow: 0.5em -0.2em white; }
-    30% { box-shadow: 0.5em 0.2em white; }
-    0%, 45%, 100% { box-shadow: 0.5em 0 white; }
+    15% { box-shadow: 10px -3px white; }
+    30% { box-shadow: 10px 3px white; }
+    0%, 45%, 100% { box-shadow: 10px 0 white; }
 }
