--- a/x-popup-menu/x-popup-menu.css
+++ b/x-popup-menu/x-popup-menu.css
@@ -66,6 +66,10 @@ x-popup-menu > button[disabled] + div {
     display: none !important;
 }
 
+x-popup-menu > button:disabled .dot-loader {
+    opacity: 0.26;
+}
+
 x-popup-menu > div > button {
     display: block;
     width: 100%;
