--- a/mixin-modal/mixin-modal.css
+++ b/mixin-modal/mixin-modal.css
@@ -37,7 +37,7 @@
 
 .modal-header [x-modal-close] {
     position: absolute;
-    right: 0;
+    left: 0;
     top: 0;
     cursor: pointer;
     width: 40px;
