--- a/mixin-modal/mixin-modal.css
+++ b/mixin-modal/mixin-modal.css
@@ -38,7 +38,7 @@
 
 .modal-header [x-modal-close] {
     position: absolute;
-    left: 0;
+    right: 0;
     top: 0;
     cursor: pointer;
     width: 40px;
