--- a/mixin-modal/mixin-modal.css
+++ b/mixin-modal/mixin-modal.css
@@ -14,7 +14,7 @@
 }
 
 .modal-header {
-    padding-top: 16px;
+    padding: 16px 0;
     text-align: center;
     position: relative;
 }
@@ -51,16 +51,13 @@
     background: rgba(0, 0, 0, 0.1);
 }
 
-.modal-header::after {
+.x-modal.pending .modal-header::after {
     content: "";
     height: 3px;
     background: var(--primary-background-progress);
     background-size: 200%;
     display: block;
     margin-top: 16px;
-}
-
-.x-modal.pending .modal-header::after {
     animation: background-progress 2s linear infinite;
 }
 
@@ -72,6 +69,8 @@
 .modal-body {
     padding: 16px 32px 24px;
     position: relative; /* Required for absolute positioning of account icon */
+    background: #fafafa;
+    box-shadow: 0 2px 5px -3px rgba(0,0,0,.125);
 }
 
 @media (max-width: 480px) {
