--- a/mixin-modal/mixin-modal.css
+++ b/mixin-modal/mixin-modal.css
@@ -14,7 +14,7 @@
 }
 
 .modal-header {
-    padding: 16px 0;
+    padding-top: 16px;
     text-align: center;
     position: relative;
     border-bottom: 1px solid #f3f3f3;
@@ -52,13 +52,16 @@
     background: rgba(0, 0, 0, 0.1);
 }
 
-.x-modal.pending .modal-header::after {
+.modal-header::after {
     content: "";
     height: 3px;
     background: var(--primary-background-progress);
     background-size: 200%;
     display: block;
     margin-top: 16px;
+}
+
+.x-modal.pending .modal-header::after {
     animation: background-progress 2s linear infinite;
 }
 
@@ -70,7 +73,6 @@
 .modal-body {
     padding: 32px 32px;
     position: relative; /* Required for absolute positioning of account icon */
-    background: #fafafa;
 }
 
 @media (max-width: 480px) {
