Move "send prepared transaction" to modal header menu

--- a/x-popup-menu/x-popup-menu.css
+++ b/x-popup-menu/x-popup-menu.css
@@ -29,6 +29,7 @@ x-popup-menu button {
     line-height: 40px;
     min-height: 40px;
     box-shadow: none;
+    box-sizing: border-box;
 }
 
 x-popup-menu button:hover {
