--- a/x-accounts/x-accounts.css
+++ b/x-accounts/x-accounts.css
@@ -235,7 +235,7 @@ x-accounts-list:empty:before {
 	height: 100%;
 }
 
-x-accounts-list x-no-content {
+x-accounts-list x-no-accounts {
 	font-size: 16px;
     display: block;
     padding: 1.5em;
@@ -243,7 +243,7 @@ x-accounts-list x-no-content {
     opacity: 0.6;
 }
 
-x-accounts-list x-no-content h1.material-icons {
+x-accounts-list x-no-accounts h1.material-icons {
     display: block;
     font-size: 120px;
     opacity: 0.3;
