--- a/x-accounts/x-accounts.css
+++ b/x-accounts/x-accounts.css
@@ -174,22 +174,36 @@ x-account-modal .account-icon {
 x-account-modal .account-icon {
     padding: 22px;
     left: calc(50% + 40px);
-    top: 115px;
+    top: 128px;
     background-size: 80%;
+    font-size: 32px;
 }
 
-x-account .secure-icon,
-x-account-modal .secure-icon {
-    background-image: url('/elements/x-accounts/icons/ic_security_black_24px.svg');
+x-account .account-icon::after {
+    position: relative;
+    left: -7.5px;
+    top: -8px;
 }
 
-x-account .vesting-icon,
-x-account-modal .vesting-icon {
-    background-image: url('/elements/x-accounts/icons/ic_access_time_black_24px.svg');
+x-account-modal .account-icon::after {
+    position: relative;
+    left: -16px;
+    top: -15.5px;
+}
+
+x-account .secure-icon::after,
+x-account-modal .secure-icon::after {
+    content: 'security';
+}
+
+x-account .vesting-icon::after,
+x-account-modal .vesting-icon::after {
+    content: 'access_time';
 }
 
 x-account .ledger-icon,
 x-account-modal .ledger-icon {
+    /* @asset(/elements/x-accounts/icons/ledger_icon_24px.svg) */
     background-image: url('/elements/x-accounts/icons/ledger_icon_24px.svg');
 }
 
@@ -217,6 +231,11 @@ x-account-modal .action-button {
     x-account .account-icon {
         left: 72px;
         top: 48px;
+    }
+
+    x-account-modal .account-icon {
+        left: calc(50% + 40px);
+        top: 135px;
     }
 }
 
