Use the style of x-address for the generated link too to make it clearer that it's clickable

--- a/x-address/x-address.css
+++ b/x-address/x-address.css
@@ -9,6 +9,13 @@ x-address, .x-address{
     font-size: 14px;
     font-weight: 600;
     white-space: nowrap;
+    cursor: pointer;
+    border-radius: 3px;
+    transition: background 100ms;
+}
+
+x-address:hover, .x-address:hover {
+    background: rgba(0, 0, 0, 0.2);
 }
 
 @media (max-width: 375px) {
@@ -22,13 +29,4 @@ x-address, .x-address{
     x-address, .x-address {
         font-size: 11px;
     }
-}
-
-x-address {
-    cursor: pointer;
-    border-radius: 3px;
-}
-
-x-address:hover{
-    background: rgba(0, 0, 0, 0.2);
 }
