--- a/x-request-link/x-receive-request-link-modal.css
+++ b/x-request-link/x-receive-request-link-modal.css
@@ -7,3 +7,7 @@ x-receive-request-link-modal x-identicon {
 x-receive-request-link-modal .x-message {
     margin: 20px;
 }
+
+.web-share-item.web-share-facebook {
+    display: none;
+}
