Reduce size of advanced option heading

--- a/x-send-transaction/x-send-transaction-modal.css
+++ b/x-send-transaction/x-send-transaction-modal.css
@@ -10,8 +10,8 @@ x-send-transaction-modal h3 {
     margin-top: 0;
 }
 
-x-send-transaction-modal a[secondary] {
-    margin-bottom: 0;
+x-send-transaction-modal h3[expandable-trigger] {
+    font-size: 10px;
 }
 
 x-send-transaction-offline-modal,
