--- a/x-accounts/x-accounts.css
+++ b/x-accounts/x-accounts.css
@@ -220,6 +220,14 @@ button[importLedger] {
     display: block;
 }
 
+button[importFile] {
+    display: none;
+}
+
+.enable-file button[importFile] {
+    display: block;
+}
+
 x-account-modal .x-account-label {
     font-size: 1.2em;
 }
