--- a/x-ledger-ui/x-ledger-ui.css
+++ b/x-ledger-ui/x-ledger-ui.css
@@ -90,6 +90,21 @@
     background-image: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" version="1" viewBox="0 0 221 70" fill="%2321b6ff"><text x="78.8" y="43.1" font-family="sans-serif" font-size="29.3" letter-spacing="0" style="line-height:1.25" word-spacing="0"><tspan x="78.8" y="43.1">Nimiq</tspan></text><path fill-rule="evenodd" d="M54 16.4c-.6-1.1-2.1-2-3.3-2H31.2c-1.3 0-2.8.9-3.4 2L18 33c-.7 1-.7 2.8 0 3.8l9.7 16.7c.6 1.1 2.1 2 3.4 2h19.5c1.2 0 2.7-.9 3.3-2L63.8 37c.6-1 .6-2.8 0-3.8zM43.1 47v3.8h-3.6v-3.7c-2.2-.2-4.8-1.2-6.6-2.8l2.4-3.7a9 9 0 0 0 5.3 2.2c2.1 0 3-.9 3-2.6 0-3.8-9.8-3.7-9.8-10.4 0-3.6 2.2-6.1 5.7-6.8v-3.8H43v3.7c2.4.3 4.1 1.5 5.6 3l-2.8 3.2c-1.3-1.3-2.5-1.9-4-1.9-1.9 0-2.8.7-2.8 2.4 0 3.5 9.8 3.2 9.8 10.3 0 3.5-2 6.3-5.8 7z"/></svg>');
 }
 
+.x-ledger-ui [ledger-screen-confirm-address] {
+    background-image: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" version="1" viewBox="0 0 221 70"><g fill="%2321b6ff"><text x="62.3" y="28.8" font-family="sans-serif" font-size="26.7" letter-spacing="0" style="line-height:1.25" word-spacing="0">Confirm</text><path d="M33.8 23.6L24.3 33l-9.5-9.5-1.9 1.9 9.5 9.5-9.5 9.5 2 2 9.4-9.6 9.5 9.5 2-1.9-9.6-9.5 9.5-9.5zM204.5 25L188 41.2l-7-7.2-2 2 7.2 7 1.9 2 2-2 16.3-16.3z"/><text x="62" y="55.1" font-family="sans-serif" font-size="26.7" letter-spacing="0" style="line-height:1.25">address</text></g></svg>');
+}
+
+.x-ledger-ui[instructions="confirm-address"] [ledger-screen-confirm-address] {
+    display: block;
+}
+
+.x-ledger-ui [ledger-screen-confirm-transaction] {
+    background-image: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" version="1" viewBox="0 0 221 70"><g fill="%2321b6ff"><text x="68.3" y="28.8" font-family="sans-serif" font-size="24" letter-spacing="0" style="line-height:1.25" word-spacing="0">Confirm</text><path d="M33.8 23.6L24.3 33l-9.5-9.5-1.9 1.9 9.5 9.5-9.5 9.5 2 2 9.4-9.6 9.5 9.5 2-1.9-9.6-9.5 9.5-9.5zM204.5 25L188 41.2l-7-7.2-2 2 7.2 7 1.9 2 2-2 16.3-16.3z"/><text x="50" y="55.1" font-family="sans-serif" font-size="24" letter-spacing="0" style="line-height:1.25">transaction</text></g></svg>');
+}
+
+.x-ledger-ui[instructions="confirm-transaction"] [ledger-screen-confirm-transaction] {
+    display: block;
+}
 
 /* Connect Animation */
 
