x-accounts create etc.: wait for keyguard to be ready

--- a/x-accounts/x-accounts.css
+++ b/x-accounts/x-accounts.css
@@ -212,11 +212,11 @@ x-popup-menu .ledger-icon {
     width: 24px;
 }
 
-button[importLedger] {
+button.import-ledger {
     display: none;
 }
 
-.enable-ledger button[importLedger] {
+.enable-ledger button.import-ledger {
     display: block;
 }
 
