Fix paging button layout

--- a/x-transactions/x-transactions.css
+++ b/x-transactions/x-transactions.css
@@ -187,4 +187,6 @@ x-paginator {
 
 x-paginator button {
     display: inline;
+    padding: 0 7px !important;
+    line-height: 40px !important;
 }
