--- a/x-accounts/x-accounts-dropdown.css
+++ b/x-accounts/x-accounts-dropdown.css
@@ -54,3 +54,7 @@ x-accounts-dropdown x-account {
     padding-left: 8px;
     padding-right: 8px;
 }
+
+x-accounts-dropdown x-account .account-icon {
+    left: 66px;
+}
