--- a/x-amount-input/x-amount-input.css
+++ b/x-amount-input/x-amount-input.css
@@ -12,6 +12,26 @@ x-amount-input input::placeholder {
     font-size: 1em !important;
 }
 
+x-amount-input button.set-all {
+    display: none;
+}
+
+x-amount-input[enable-set-all] button.set-all {
+    display: initial;
+    position: absolute;
+    left: 8px;
+    bottom: 8px;
+    opacity: 0;
+    transition: opacity 0.2s ease-out, pointer-events 0.1s;
+    pointer-events: none;
+}
+
+x-amount-input[enable-set-all] input:focus ~ button.set-all,
+x-amount-input button.set-all:active {
+    opacity: 1;
+    pointer-events: all;
+}
+
 x-amount-input input + .ticker {
     display: block;
     position: absolute;
@@ -22,6 +42,7 @@ x-amount-input input + .ticker {
     font-size: 1.5em;
     letter-spacing: 0.08em;
     opacity: 0.4;
+    transition: opacity 0.2s ease-out;
 }
 
 x-amount-input input:focus + .ticker {
