--- a/x-fee-input/x-fee-input.css
+++ b/x-fee-input/x-fee-input.css
@@ -14,6 +14,10 @@ x-fee-input .x-fee-labels label {
     cursor: pointer;
 }
 
+x-fee-input .x-fee-sats {
+    display: none;
+}
+
 x-fee-input x-currency-fiat {
     display: none;
 }
